--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-size: cover;
+    background-position: center;
+}
+
+.map {
+    width: 1000px;
+    object-fit: contain;
+    margin-bottom: 50px;
+}
+
+.richPreview {
+    display: flex;
+    position: relative;
+    width: 450px;
+    height: 100px;
+    background-color: white;
+    border-radius: 5px;
+    transition: all 200ms;
+}
+
+.richPreview img {
+    height: 100px;
+    width: 100px;
+    border-radius: 4px 0 0 4px;
+    background-color: black;
+}
+
+.richPreview div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+}
+
+h2, p {
+    margin: 0;
+}
+
+h2 {
+    margin-bottom: 3px;
+}
+
+.hide {
+    opacity: 0;
 }
