--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,15 @@ body {
     background-position: center;
 }
 
+.langSwitch {
+    position: absolute;
+    font-size: 1.5rem;
+    color: white;
+    right: 15px;
+    top: 15px;
+    z-index: 1;
+}
+
 .map {
     width: 1000px;
     margin-bottom: 50px;
@@ -41,7 +50,7 @@ body {
 .mobileKiosk {
     position: absolute;
     width: 100%;
-    padding-top: 25px;
+    padding-top: 30px;
     padding-bottom: 50px;
 }
 
