Mobile View Updates
1. Group icons under headers in this order: Busrides, Discover Digital, CSPS Digital Academy. Example here: https://files.slack.com/files-pri/TGB9RAJ5C-F015ELA7WAW/picture1.jpg
2. In the CSPS Digital Academy section, place the video first, the placemeat next then the web site and the other links last.

--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,15 @@ body {
     padding-bottom: 50px;
 }
 
+.mobileKiosk h2 {
+    color: white;
+    border-bottom: solid white;
+    border-radius: 2px;
+    max-width: 95%;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
 .richPreview {
     display: flex;
     align-items: center;
