--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@ body {
     align-items: center;
     height: 100vh;
     width: 100vw;
+}
+
+.backgroundImage {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
     background-size: cover;
     background-position: center;
 }
